# Scrape.AI

./: .gitignore  README.md  docker-compose.yml  mongo-init.js  pyproject.toml
front/: .env.example  .eslintrc.json  .gitignore  README.md  TODO.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.js
front/.next/: app-build-manifest.json  trace
front/.next/cache/: .rscinfo
front/.next/server/: app-paths-manifest.json  server-reference-manifest.js  server-reference-manifest.json
front/public/: tools_desc.json
front/src/: App.vue  main.js  style.css
front/src/app/: globals.css  layout.tsx  page.tsx  typingCursor.css
front/src/components/: Chat.vue  Login.vue  ProtectedRoute.tsx  Toast.tsx  TypeWriter.tsx  WaitingIndicator.tsx
mcp-server/: Dockerfile  README.md  pyproject.toml  requirements.txt  test-main.py
mcp-server/src/: main.py
references/: Architecture ScrapeAI.drawio  notes-tools.txt
server/: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  mongo-init.js  pyproject.toml  requirements.txt  test-main.py
server/ai/: ai.py
server/read_doc/: Levenshtein.py  main.py  read_doc.py  read_file.py
server/src/: main.py
server/src/config/: Config.py  logs.py
server/src/endpoints/: admin.py  chat.py  token.py  users.py
server/src/models/: comp_db.py  conv_db.py  db_connect.py  files_db.py  user_db.py
server/src/schema/: company_sc.py  files_sc.py  mcp_sc.py  mistral_sc.py  openai_sc.py  users_sc.py
server/src/security/: secure.py
server/src/utils/: chat_mistral.py  chat_openai.py
(+179 files in other folders)
