[tool.poetry]
name = "scrape-ai"
version = "0.1.0"
description = ""
authors = ["Math <matheo.vovard@efrei.net>"]
readme = "README.md"
packages = [{include = "scrape"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.12"}
passlib = "^1.7.4"
bcrypt = "^4.3.0"
pymongo = {extras = ["srv"], version = "^4.12.1"}
python-dotenv = "^1.1.0"
pyjwt = "^2.10.1"
async-lru = "^2.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
